_generated-doc/2.2/config/quarkus-smallrye-reactivemessaging.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-reactivemessaging_configuration]]link:#quarkus-smallrye-reactivemessaging_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.health.enabled]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.health.enabled[quarkus.reactive-messaging.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled[quarkus.reactive-messaging.metrics.enabled]`

[.description]
--
Whether or not Reactive Messaging metrics are published in case a metrics extension is present (default to false).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict[quarkus.reactive-messaging.strict]`

[.description]
--
Enables or disables the strict validation mode.
--|boolean 
|`false`

|===