_generated-doc/2.7/config/quarkus-smallrye-reactivemessaging.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-reactivemessaging_configuration]]link:#quarkus-smallrye-reactivemessaging_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.health.enabled]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.health.enabled[quarkus.reactive-messaging.health.enabled]`

[.description]
--
Whether an health check is published in case the smallrye-health extension is present.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.auto-connector-attachment]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.auto-connector-attachment[quarkus.reactive-messaging.auto-connector-attachment]`

[.description]
--
Whether it should automatically configure the *connector* attribute of channels that don't have an upstream source (for incoming channels), or a downstream consumer (for outgoing channels). When enabled, it verifies that there is only a single connector on the classpath. In that case, it automatically associates the *orphans* channel to the connector, removing the need to add the `.connector` attribute in the application configuration.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.metrics.enabled[quarkus.reactive-messaging.metrics.enabled]`

[.description]
--
Whether or not Reactive Messaging metrics are published in case a metrics extension is present (default to false).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict]]`link:#quarkus-smallrye-reactivemessaging_quarkus.reactive-messaging.strict[quarkus.reactive-messaging.strict]`

[.description]
--
Enables or disables the strict validation mode.
--|boolean 
|`false`

|===